--- a/app/views/doctors/show.html.erb
+++ b/app/views/doctors/show.html.erb
@@ -40,7 +40,14 @@
 
 <h1> Checked In </h1>
 <table class="checkedIn">
+  <tr id="checkedInRow"> 
+    <td id="appt3"> Appointment</td>
+    <td id="name3"> Name</td>
+    <td id="purpose3"> Purpose</td>
+    <td id="checkbox3"> Seen? </td>
+  </tr>
 </table>
+
 
 <h1> En Route </h1>
 <table class="enRoute">
@@ -52,6 +59,11 @@
 
 <h1> Completed </h1>
 <table class="Completed">
+    <tr id="completedRow"> 
+    <td id="appt4"> Appointment</td>
+    <td id="name4"> Name</td>
+    <td id="purpose4"> Purpose</td>
+  </tr>
 </table>
 
 
@@ -143,7 +155,6 @@
     </div>
   </div>
  -->
-<br><br>
 <footer class="page-footer blue darken-3">
   <div class="container">
     <div class="row">
@@ -161,7 +172,6 @@
 </footer>
 
 
-
 <script>
   $(function(){
 
@@ -173,8 +183,6 @@
         console.log("mooo");
       var descripRow = $('<tr>').attr('id', 'descripRow');
         var enRouteRow = $('<tr>').attr('id', 'enRouteRow');
-        var checkedInRow = $('<tr>').attr('id', 'checkedInRow');
-        var completedRow = $('<tr>').attr('id', 'completedRow');
         var appt = $('<td>').attr('id', 'appt').text("Appt");
         var patientName = $('<td>').attr('id', 'name').text("Name");
         var purpose = $('<td>').attr('id', 'purpose').text("Purpose");
@@ -183,21 +191,10 @@
         var purpose2 = $('<td>').attr('id', 'purpose').text("Purpose");
         var checkbox = $('<td>').attr('id', 'checkbox').text("Checkbox");
         var descripObject = descripRow.append(appt).append(patientName).append(purpose);
-        var eta = $('<td>').attr('id', 'eta').text("ETA");
-        var appt3 = $('<td>').attr('id', 'appt3').text("Appt");
-        var patientName3 = $('<td>').attr('id', 'name3').text("Name");
-        var purpose3 = $('<td>').attr('id', 'purpose3').text("Purpose");
-        var checkbox3 = $('<td>').attr('id', 'checkbox3').text("Checkbox");
-        var appt4 = $('<td>').attr('id', 'appt4').text("Appt");
-        var patientName4 = $('<td>').attr('id', 'name4').text("Name");
-        var purpose4 = $('<td>').attr('id', 'purpose4').text("Purpose");
+        var eta = $('<td>').attr('id', 'eta').text("ETA");  
         var enRouteObject= enRouteRow.append(appt2).append(patientName2).append(purpose2).append(eta).append(checkbox);
-        var checkedIn= checkedInRow.append(appt3).append(patientName3).append(purpose3).append(checkbox3);
-        var completed= completedRow.append(appt4).append(patientName4).append(purpose4);
         $('.enRoute').append(enRouteObject);
         $('.laterAppt').append(descripObject);
-        $('.checkedIn').append(checkedIn);
-        $('.Completed').append(completed);
         data.forEach(function(element, index, array){
           var patientAppt = $('<tr>').attr('id', 'patientAppt').data('patient-id', element.patient.id);
             var start = $('<td>').attr('id', 'start').text(element.start);
@@ -208,9 +205,8 @@
             if (element.eta != null) {
               $('.enRoute').append(patientObject);
               var eta = $('<td>').attr('id', 'eta').text(element.eta);
-              var checkbox = $('<input>').attr("id","arrived_checkbox").attr("type","checkbox");
+              var checkbox = $('<button>').attr("id","arrived_checkbox").attr("type","button").text("Check In");
               patientObject.append(eta).append(checkbox);
-              debugger;
             }
             else {
               $('.laterAppt').append(patientObject);
@@ -219,20 +215,19 @@
       });
     $('.enRoute').empty();
     $('.laterAppt').empty();
-    $('.checkedIn').empty();
-    $('.Completed').empty();
     };
 
     function changeToCheckedIn(){
       var patientObject = $(this).parent();
       $('.checkedIn').append(patientObject);
-      $.ajax({
-        url: '/doctors/' + <%= current_doctor.id %> + '/appointments/patient/' + $(this).parent().data().patientId,
-        type: 'DELETE',
-        success: function() {
-          $(this).remove();
-        }
-      });
+      $(this).remove();
+      // $.ajax({
+      //   url: '/doctors/' + <%= current_doctor.id %> + '/appointments/patient/' + $(this).parent().data().patientId,
+      //   type: 'DELETE',
+      //   success: function() {
+      //     $(this).remove();
+      //   }
+      // });
     }
     setInterval(m,5000);
 
