--- a/app/assets/stylesheets/patients.css.scss
+++ b/app/assets/stylesheets/patients.css.scss
@@ -26,9 +26,11 @@
   font-size: 1rem;
 }
 
-#send_message{
+#send_message {
   margin: 0 auto;
   font-size: 1rem;
 }
-
+.page-footer {
+position: fixed;
+}
 
