--- a/app/views/doctors/show.html.erb
+++ b/app/views/doctors/show.html.erb
@@ -11,13 +11,13 @@
         <div class="nav-wrapper"><a id="logo-container" href="#!" class="brand-logo"><%= image_tag("in loop logo.png") %></a>
           <a href="#" data-activates="nav-mobile" class="button-collapse"><i class="mdi-navigation-menu"></i></a>
           <ul class="right hide-on-med-and-down">
-            <li><a href="#">View</a></li>
+            <li><%= link_to 'View', doctor_path(current_doctor.id) %></li>
             <li><%= link_to 'Calendar', doctors_path %></li>
             <li><%= link_to "logout", destroy_doctor_session_path, method: :delete, :class => 'navbar-link', id: "logout" %></li>
           </ul>
 
           <ul id="nav-mobile" class="side-nav">
-            <li><a href="#">View</a></li>
+            <li><%= link_to 'View', doctor_path(current_doctor.id) %></li>
             <li><%= link_to 'Calendar', doctors_path %></li>
             <li><%= link_to "logout", destroy_doctor_session_path, method: :delete, :class => 'navbar-link', id: "logout" %></li>
           </ul>
