--- a/app/assets/javascripts/doctors.js.erb
+++ b/app/assets/javascripts/doctors.js.erb
@@ -52,4 +52,10 @@ $(".doctors.index").ready(function(){
     }
   });
 
+  $(document).ready(function(){
+    // the "href" attribute of .modal-trigger must specify the modal ID that wants to be triggered
+    $('.modal-trigger').leanModal('#modal1');
+  });
+
 });
+
