--- a/app/views/doctors/index.html.erb
+++ b/app/views/doctors/index.html.erb
@@ -18,7 +18,6 @@
     </div>
   </nav>
 </div>
-
 <br><br><br>
 <div id="calendar"></div>
 <br>
@@ -26,16 +25,46 @@
 <a class="modal-trigger waves-effect waves-light red btn" href="#modal1">Create Appointment</a>
 <!-- Modal Structure -->
 <div id="modal1" class="modal modal-fixed-footer">
-  <div class="modal-content">
-    <h4>Modal Header</h4>
-    <p>A bunch of text</p>
-  </div>
-  <div class="modal-footer">
-    <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat ">Agree</a>
-  </div>
+  <%= form_for(@appointment) do |f| %>
+    <div class="modal-content">
+      <div>
+        <div class="field">
+          <%= f.label :doctor_id %><br>
+          <%= f.text_field :doctor_id %>
+        </div>
+        <div class="field">
+          <%= f.label :doctor_office %><br>
+          <%= f.text_field :doctor_office %>
+        </div>
+        <div class="field">
+          <%= f.label :title %><br>
+          <%= f.text_field :title %>
+        </div>
+        <div class="field">
+          <%= f.label :start %><br>
+          <%= f.text_field :start, class: 'date-start' %>
+        </div>
+        <div class="field">
+          <%= f.label :end %><br>
+          <%= f.text_field :end, class: 'date-end' %>
+        </div>
+      
+        <div class="field">
+          <%= f.label :description %><br>
+          <%= f.text_field :description %>
+        </div>
+      </div>
+    </div>
+    <div class="modal-footer">
+      <div class="actions">
+        <%= f.submit %>
+      </div>
+      <!-- <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat ">Agree</a> -->
+    </div>
+  <% end %>
 </div>
 <br><br>
-<footer class="page-footer blue darken-3">
+<!-- <footer class="page-footer blue darken-3">
   <div class="container">
     <div class="row">
       <div class="col l12 s12">
@@ -50,7 +79,7 @@
     </div>
   </div>
 </footer>
-
+ -->
 
 
 
