--- a/app/views/doctors/index.html.erb
+++ b/app/views/doctors/index.html.erb
@@ -64,7 +64,7 @@
   <% end %>
 </div>
 <br><br>
-<!-- <footer class="page-footer blue darken-3">
+<footer class="page-footer blue darken-3">
   <div class="container">
     <div class="row">
       <div class="col l12 s12">
@@ -79,7 +79,7 @@
     </div>
   </div>
 </footer>
- -->
+
 
 
 
