--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -10,8 +10,11 @@
  * defined in the other CSS/SCSS files in this directory. It is generally better to create a new
  * file per style scope.
  *
- *= require materialize
  *= require fullcalendar
+ *= require materialize
+ *= require bootstrap
+ *= require bootstrap-material-design
+ *= require bootstrap-material-datepicker
  *= require_tree .
  *= require_self
  */
