--- a/app/views/doctors/index.html.erb
+++ b/app/views/doctors/index.html.erb
@@ -22,6 +22,39 @@
 <br><br><br>
 <div id="calendar"></div>
 <br><br>
+<!-- Modal Trigger -->
+<a class="modal-trigger waves-effect waves-light red btn" href="#modal1">Create Appointment</a>
+<!-- Modal Structure -->
+<div id="modal1" class="modal modal-fixed-footer">
+  <%= form_for(@appointment) do |f| %>
+    <div class="modal-content">
+      <div class="field">
+        <%= f.label :title %><br>
+        <%= f.text_field :title %>
+      </div>
+      <div class="field">
+        <%= f.label :start %><br>
+        <%= f.text_field :start, id: 'date-start' %>
+      </div>
+      <div class="field">
+        <%= f.label :end %><br>
+        <%= f.text_field :end , id: 'date-end' %>
+      </div>
+    
+      <div class="field">
+        <%= f.label :description %><br>
+        <%= f.text_field :description %>
+      </div>
+    </div>
+    <div class="modal-footer">
+      <button type="button" class="modal-action modal-close waves-effect waves-red btn-flat">Cancel</button>
+      <div class="actions">
+        <%= f.submit 'Create' %>
+      </div>
+    </div>
+  <% end %>
+</div>
+<br><br>
 <footer class="page-footer blue darken-3">
   <div class="container">
     <div class="row">
