--- a/app/views/doctors/index.html.erb
+++ b/app/views/doctors/index.html.erb
@@ -55,7 +55,7 @@
   <% end %>
 </div>
 <br><br>
-<footer class="page-footer blue darken-3">
+<!-- <footer class="page-footer blue darken-3">
   <div class="container">
     <div class="row">
       <div class="col l12 s12">
@@ -70,7 +70,7 @@
     </div>
   </div>
 </footer>
-
+ -->
 
 
 
