--- a/app/assets/javascripts/doctors.js.erb
+++ b/app/assets/javascripts/doctors.js.erb
@@ -11,7 +11,7 @@ $(".doctors.index").ready(function(){
       // days of week. an array of zero-based day of week integers (0=Sunday)
       // (Monday-Thursday in this example)
     },
-    height: 400,
+    height: 'auto',
     defaultView: 'agendaWeek',
     eventLimit: true, // allow "more" link when too many events
     views: {
