--- a/app/views/doctors/index.html.erb
+++ b/app/views/doctors/index.html.erb
@@ -11,7 +11,7 @@
 
         <ul id="nav-mobile" class="side-nav">
           <li><%= link_to 'View', doctor_path(current_doctor.id) %></li>
-          <li><%= link_to 'Calendar', doctors_path %></li>
+          <li><%= link_to 'Calendar', doctors_path(current_doctor.id) %></li>
           <li><%= link_to "logout", destroy_doctor_session_path, method: :delete, :class => 'navbar-link', id: "logout" %></li>
         </ul>
       </div>
@@ -26,21 +26,43 @@
   <a class="modal-trigger waves-effect waves-light red btn" href="#modal1">Create Appointment</a>
   <!-- Modal Structure -->
   <div id="modal1" class="modal modal-fixed-footer">
-    <%= form_for(@appointment) do |f| %>
+    <div class="row">
+      <%= form_for@appointment, html: {class: 'col s12'} do |f| %>
       <div class="modal-content">
+        <div class="row">
+          <div class="field col s6">
+            <%= f.label :address %><br> <!-- change -->
+            <%= f.text_field :address %>
+          </div>
+          <div class="field col s6">
+            <%= f.label :city %><br> <!-- change -->
+            <%= f.text_field :city %>
+          </div>
+        </div>
+        <div class="row">
+          <div class="field col s6">
+            <%= f.label :state %><br> <!-- change -->
+            <%= f.text_field :state %>
+          </div>
+          <div class="field col s6">
+            <%= f.label :zip %><br> <!-- change -->
+            <%= f.text_field :zip %>
+          </div>
+        </div>
         <div class="field">
           <%= f.label :title %><br>
           <%= f.text_field :title %>
         </div>
-        <div class="field">
-          <%= f.label :start %><br>
-          <%= f.text_field :start, id: 'date-start' %>
+        <div class="row">
+          <div class="field col s6">
+            <%= f.label :start %><br>
+            <%= f.text_field :start, id: 'date-start' %>
+          </div>
+          <div class="field col s6">
+            <%= f.label :end %><br>
+            <%= f.text_field :end , id: 'date-end' %>
+          </div>
         </div>
-        <div class="field">
-          <%= f.label :end %><br>
-          <%= f.text_field :end , id: 'date-end' %>
-        </div>
-      
         <div class="field">
           <%= f.label :description %><br>
           <%= f.text_field :description %>
@@ -52,6 +74,7 @@
           <%= f.submit 'Create' %>
         </div>
       </div>
-    <% end %>
+      <% end %>
+    </div>
   </div>
 </div>
