--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -20,10 +20,10 @@
  */
 
 
-body {
-  // background: radial-gradient(#bbdefb, #2196f3, #0d47a1); // landing page
-  font-size: 62.5%;
-}
+// body {
+//   background: radial-gradient(#bbdefb, #2196f3, #0d47a1); // landing page
+//   font-size: 62.5%;
+// }
 
 #download-button {
   font-size: 1rem;
