--- a/app/views/application/index.html.erb
+++ b/app/views/application/index.html.erb
@@ -1,4 +1,11 @@
-<div class="section no-pad-bot" id="index-banner" style="background: radial-gradient(#bbdefb, #2196f3, #0d47a1);">
+<style>
+  body {
+  background: radial-gradient(#bbdefb, #2196f3, #0d47a1); // landing page
+  font-size: 62.5%;
+}
+</style>
+
+<div class="section no-pad-bot" id="index-banner">
     <div class="container">
       <br><br>
       <!-- <h1 class="header center red-text">WELCOME TO IN-LOOP</h1> -->
@@ -9,10 +16,10 @@
         <h5 class="header col s12 light">Let your doctor know you're on your way</h5>
       </div>
       <div class="row">
-        <div class="left">
+        <div class="center col s6 offset s6">
           <%= link_to " I'm a Patient ", p_omniauth_patients_path, id: "download-button", class: "btn-large waves-effect waves-light red" %>
         </div>
-        <div class="right">
+        <div class="center col s6">
           <%= link_to "I'M A PROVIDER", d_omniauth_doctors_path, id: "download-button", class: "btn-large waves-effect waves-light red" %>
         </div>
     </div>
