styled doctor view

--- a/app/assets/stylesheets/doctors.css.scss
+++ b/app/assets/stylesheets/doctors.css.scss
@@ -48,7 +48,7 @@ div#users-contain table td, div#users-contain table th {
 
 #arrived_checkbox{
   width: 9rem;
-  background-color: green;
+  // background-color: green;
 }
 #arrived_checkbox {
   width: 1rem;
@@ -56,10 +56,10 @@ div#users-contain table td, div#users-contain table th {
 .checkedIn {
   font-size: 14px;
 }
-.enRoute {
+.enrte {
   font-size: 14px;
 }
-.laterAppt {
+.later {
   font-size: 14px;
 }
 .Completed {
