fixed doctor show styling

--- a/app/views/doctors/show.html.erb
+++ b/app/views/doctors/show.html.erb
@@ -71,9 +71,9 @@
 
     <section>
       <div class="row">
-        <div class="col s7">
+        <div class="col l7 s12">
           <table class="hoverable checkedIn">
-            <h5 class="header center red-text">Current Waiting List</h5>
+            <h5 class="header left red-text">Current Waiting List</h5>
             <thead>
               <tr>
                   <th>Apointment</th>
@@ -92,11 +92,13 @@
                 <td></td>
               </tr>
             </tbody>
+
           </table>
         </div>
-        <div class="col s4">
+        <div class="col l4">
           <table class="hoverable Completed">
             <h5 class="header left red-text">Seen Today</h5>
+
             <thead>
               <tr>
                   <th>Appointment</th>
@@ -112,6 +114,7 @@
                 <td id="purpose4"></td>
               </tr>
             </tbody>
+
           </table>
         </div>
       </div>
@@ -119,9 +122,10 @@
     <br>
     <section>
       <div class="row">
-        <div class="col s7">
+        <div class="col l7 s12">
           <table class="hoverable enrte">
-            <h5 class="header center red-text">Currently Arriving List with ETA</h5>
+            <h5 class="header left red-text">Currently Arriving List with ETA</h5>
+
             <thead>
               <tr>
                   <th>Apointment</th>
@@ -134,11 +138,13 @@
 
             <tbody class="enRoute">
             </tbody>
+
           </table>
         </div>
-        <div class="col s4">
+        <div class="col l4">
           <table class="hoverable later">
             <h5 class="header left red-text">Upcoming Appointments</h5>
+
             <thead>
               <tr>
                   <th>Appointment</th>
@@ -149,6 +155,7 @@
 
             <tbody class="laterAppt">
             </tbody>
+
           </table>
         </div>
       </div>
